made the website hopefully

--- a/index.html
+++ b/index.html
@@ -357,7 +357,34 @@ display: none;
 </div>
 
 
-
+<pre class="r"><code>library(tidyverse)</code></pre>
+<pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
+## ✔ dplyr     1.1.4     ✔ readr     2.1.5
+## ✔ forcats   1.0.0     ✔ stringr   1.5.1
+## ✔ ggplot2   3.5.1     ✔ tibble    3.2.1
+## ✔ lubridate 1.9.3     ✔ tidyr     1.3.1
+## ✔ purrr     1.0.2     
+## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+## ✖ dplyr::filter() masks stats::filter()
+## ✖ dplyr::lag()    masks stats::lag()
+## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
+<pre class="r"><code>library(knitr)
+library(palmerpenguins)
+library(ggplot2)</code></pre>
+<div id="data" class="section level2">
+<h2>Data</h2>
+<p>Both datasets contain data for 344 penguins. There are 3 different
+species of penguins in this dataset, collected from 3 islands in the
+Palmer Archipelago, Antarctica.</p>
+</div>
+<div id="single-trait-distribution" class="section level2">
+<h2>Single trait distribution</h2>
+<div id="bill-length-differences" class="section level3">
+<h3>Bill length differences</h3>
+<p>The bill length is significantly different between species of
+penguins</p>
+</div>
+</div>
 
 
 
